Arrows can change direction and visibility correctly. A bug with the first column exists.

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -112,8 +112,8 @@ h6 {
 }
 
 
-.hejhejhejhej {
-  display:none;
+.hideTableArrow {
+  display:none !important;
 }
 
 
